[gd_scene load_steps=2 format=3 uid="uid://drr4vkyhcyei1"]

[ext_resource type="Script" path="res://slaughter.gd" id="1_pl6fn"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl6fn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -86.0
offset_right = 119.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.5
offset_top = -113.0
offset_right = 56.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "RESUME"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 71.5
offset_top = -113.0
offset_right = 184.5
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "QUIT"

[node name="Restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.5
offset_top = -113.0
offset_right = -71.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "RESTART"

[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Restart" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Restart" to="." method="_on_restart_button_down"]
